# swe-routing-eval

./: .gitignore  AGENTS.md  README.md  instances-go.jsonl  instances-java.jsonl  instances-rust.jsonl  play.py  pyproject.toml  runs.db
.github/workflows/: ci.yml
config/: env_spec_89cac2a2.json  prices.example.json  prices.json
docs/: PLAN.md  data.json  discordant-analysis.html  discordant-analysis.md  grade-binary-contract.md  index.html  methodology.html
results/: memo.md
scripts/: analyze_runs.py  discordant_deep_dive.py  eval_sweep.py  export_dashboard_data.py  m0_coverage_check.py  regrade.py  regrade.sh  spot_audit.py  watch_sweep.py
src/swe_routing_eval/: budget.py  cost.py  cursor_usage.py  frontier.py  grading.py  ingest.py  languages.py  openai_config.py  orchestrator.py  parser.py  scaffold.py  stats.py  store.py  vertex.py
src/swe_routing_eval/llm/: __init__.py  anthropic_vertex.py  base.py  openai_client.py  types.py
tests/: test_analyze_runs.py  test_cost.py  test_cursor_usage.py  test_eval_sweep.py  test_frontier.py  test_grading.py  test_ingest.py  test_languages.py  test_m0.py  test_orchestrator.py  test_parser.py  test_scaffold.py  test_spot_audit.py  test_stats.py  test_store.py  test_vertex.py
tests/llm/: test_anthropic_vertex.py  test_openai_client.py
