[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swe-routing-eval"
version = "0.1.0"
description = "Cost/quality model routing evaluator — consumer side of SWE-benchify"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic[vertex]>=0.40",
]

[project.optional-dependencies]
analysis = [
    "scipy>=1.13",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "scipy>=1.13",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pandas>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/swe_routing_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
